module2-solution - fix double border and menu item padding and margins

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,7 +10,10 @@ h1 {
 }
 
 p {
-  margin-top: 35px; 
+  margin-top: 25px;
+  margin-bottom: 5px;
+  padding: 10px;
+  padding-bottom: 3px;
 }
 
 /* div with margin for each menu item */
@@ -29,10 +32,12 @@ section.menu_item_title {
   width: 120px;
   padding-top: 1px;
   padding-bottom: 1px;
+  border: 1px solid black;
+  border-top-width: 0px;
+  border-right-width: 0px;
   text-align: center;
   position: absolute;
   right: 0;
-  border: 1px solid black;
 }
 
 /* Meat classes */
